fixing whitespace bug after hugo shortcodes

--- a/hugo/themes/scrapyard/assets/css/global-styles.css
+++ b/hugo/themes/scrapyard/assets/css/global-styles.css
@@ -92,6 +92,8 @@ figcaption {
   max-width: 70ch;
 }
 
+p:empty {display:none;}
+
 figcaption {
   font-size: 0.8em;
   font-style: italic;
